@startuml Pantry Manager Classes

header PantrySync.pro
right footer Let that sync in...
title Entity Data

	entity User {
    	*id : int <<PK>>
    	*email : string <<Unique>>
    	*password : string
	}

	entity Group {
    	*id : UID <<PK>>
    	*user_manager : int <<FK>>
    	*name : string
	}
	note right of Group
    	User manager adds
    	group members
	end note

	entity GroupMember {
    	*group_id : UID <<FK>>
    	*user_id : int <<FK>>
	}


	entity Item {
    	*group_id : <<FK>>
    	*name : string
    	*category : string
   	 
    	*stock_quantity : float
    	*minimum_threshold : int
    	*auto_add_to_shoppng_list : bool
    	*notification_date : date

    	*shop_quantity : float
    	*auto_replenish_from_shopping_list

    	*quantity : int
	}
	note left of Item::stock_quantity
    	Fractions may be easier
    	for users to work with
	end note

	entity ItemDescription {
    	*group_id : UID <<FK>>
    	*item_id : string <<FK>>
    	*description : string
	}

	entity ItemNotification {
    	*group_id : UID <<FK>>
    	*item_name : string <<FK>>
    	*message : string
	}

	entity ItemHistory {
    	*group_id : UID <<FK>>
    	*item_id : string <<FK>>
    	*name : string
    	*last_used : datetime
	}

	entity Recipes {
    	*group_id : UID <<FK>>
    	*name : string
    	*ingredients : text
    	*instructions : text
	}

	note right of Recipes::ingredients
    	A delimitted list
    	of ingredient names
    	and count.
	end note

    
	entity ActionLog {
    	*group_id : UID <<FK>>
    	*message : string
    	*timestamp : datetime
	}

	User }|--|| Group
	Group ||--o{ GroupMember
	Group ||--o{ Item
	Item ||--o| ItemDescription
	Item ||--o| ItemNotification
	Item ||--o{ ItemHistory
	Group ||--o{ Recipes
	Group ||--o{ ActionLog

@enduml
